cc: fix damage tracker rect with hidpi filters.

BUG=624027
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2241763002
Cr-Commit-Position: refs/heads/master@{#411734}

Former-commit-id: 2bc7c6121856f959d907ec52e0aadf43d7a39616